# kosui-forge

./: .gitignore  AGENTS.md  LICENSE  README.md  config.example.toml  pyproject.toml  sonar-project.properties
.forgejo/workflows/: ci.yml
docs/: third-party-notices-and-sbom.md
docs/architecture/: clean-architecture.md  cross-platform-gui-plan.md
docs/ci/: forgejo-actions.md
scripts/ci/: run-sonar.sh  verify.sh
src/kosui_forge/: __init__.py
src/kosui_forge/adapters/: __init__.py  doctor.py  forgejo.py  git.py  github.py
src/kosui_forge/adapters/persistence/: __init__.py  configuration.py  journal.py
src/kosui_forge/application/: __init__.py  contracts.py  doctor.py
src/kosui_forge/domain/: __init__.py  configuration.py  errors.py  redaction.py  repository.py
src/kosui_forge/infrastructure/: __init__.py  cli.py  desktop.py  doctor.py
src/kosui_forge/ports/: __init__.py  doctor.py
src/kosui_forge/presentation/: __init__.py
src/kosui_forge/presentation/cli/: __init__.py  doctor.py
src/kosui_forge/presentation/desktop/: __init__.py  doctor_model.py  doctor_page.py  main_window.py  worker.py
src/repo_bootstrap/: __init__.py  cli.py  config.py  doctor.py  errors.py  forgejo.py  github.py  gitops.py  journal.py  mirror.py  paths.py  preflight.py  redaction.py  validation.py  workflow.py
tests/: test_application.py  test_batch.py  test_boundaries.py  test_cli.py  test_clients.py  test_config_bootstrap.py  test_configuration.py  test_core_migration.py  test_desktop.py  test_doctor.py  test_doctor_adapter.py  test_e2e.py  test_forgejo_sdk.py  test_preflight.py  test_safety.py  test_workflow.py
tests/architecture/: __init__.py  import_contract.py  test_import_contracts.py
tests/architecture/fixtures/allowed/adapters/: repository.py
tests/architecture/fixtures/allowed/application/: relative_and_values.py  relative_parent.py  use_case.py
tests/architecture/fixtures/allowed/domain/: dynamic.py  repository.py
tests/architecture/fixtures/allowed/infrastructure/: cli.py
tests/architecture/fixtures/allowed/ports/: credentials.py  repository.py
tests/architecture/fixtures/cyclic/domain/: one.py  two.py
tests/fixtures/forgejo-11.0.16/: organization-permissions.json  organization.json  push-mirror.json  repository.json  user.json  version.json
(+17 files in other folders)
