[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-bootstrap"
version = "0.1.0"
description = "Private-by-default Forgejo repository creation and GitHub push-mirror automation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "githubkit[all-schemas]>=0.16.0",
  "pyforgejo>=2.0.7,<3",
]
license = {text = "MIT"}
authors = [{name = "kosuiroom"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]

[project.scripts]
repo-bootstrap = "repo_bootstrap.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
