[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kosui-forge"
version = "0.2.0"
description = "Cross-platform Forgejo and GitHub repository manager with a private-by-default automation core"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "githubkit[all-schemas]>=0.16.0",
  "pyforgejo>=2.0.7,<3",
]
license = "MIT"
authors = [{name = "Kosui Forge contributors"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]

[project.scripts]
repo-bootstrap = "repo_bootstrap.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
